--- a/members/galaxy.yaml
+++ b/members/galaxy.yaml
@@ -2,5 +2,5 @@
 # Galaxy username
 ## Write an issue and tag @@ESNFranceG33kTeam/admin to be add if your are part of the G33kTeam
 galaxy_username:
-  - Mickahell
-  - devertry
+  - "Mickahell"
+  - "devertry"
